update nav spacing fixes #25

--- a/_sass/modules/_m-header.scss
+++ b/_sass/modules/_m-header.scss
@@ -38,7 +38,7 @@
     text-align: right;
     li {
       display: inline-block;
-      padding: 5px;
+      padding: 5px 8px;
     }
     @media(max-width: $break-medium) {
       margin-top: 10px;
